@@ -23,6 +23,7 @@ Version 1.5.5+svn:
    * Added "border" parameter to [terrain_mask] that overlays on the border
      in addition to the playable map area. The used mask must have the same
      border_size as the map (i.e. currently 1), else this will be ignored.
+   * Restore x1, y1, x2, and y2 after events fired from events.
  * Authoring tools:
    * trackplacer is a pygtk tool that makes it possible to visually edit
      the journey tracks on Wesnoth campaign maps.
